[package]
name = "hello-wasm"
version = "0.1.1"
authors = ["iofuwisa <ootuka70@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/iofuwisa/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = {"version" = "0.3", features=['console']}
serde_json = "1.0.69"
serde_derive = "1.0.130"
serde = { version = "^1.0.101", features = ["derive"] }